--- a/SMS.API/appsettings.json
+++ b/SMS.API/appsettings.json
@@ -9,5 +9,9 @@
 
     "conn": "Server=LAPTOP-D02SRM5Q\\SQLEXPRESS;Database=SMS;Trusted_Connection=True;TrustServerCertificate=true"
   },
+  "StoreProcedure": {
+    "GetAllStudent": "spGetAllStudent",
+    "GetStudentById": "spGetStudentById"
+  },
   "AllowedHosts": "*"
 }
